# ml_playground

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml
autoencoders/: .gitignore  autoencoder.ipynb  autoencoder.py  cnn_autoencoder.ipynb  data_eploration.py  data_exploration.ipynb  data_loading.py  dense_autoencoder.ipynb  evaluation.py  training.py
digit_recognizer/: digit-recognizer.ipynb  digit_recognizer.md  digit_recognizer_submission.csv
vision_transformer/: mnist_classification.ipynb  vit.py
